1. SecurityConfig-권한 url 수정 2. 컨트롤러(Qna-myqna, User-mypage) 추가 2. img, css, font 추가 3. login/join,main,mypage,myqna.html 완료

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -3,9 +3,24 @@
     src : url("../font/NanumSquareNeo-Variable.woff") format("woff");
 }
 @font-face{
-    font-family: "NanumSquare";
-    src : url("../font/NanumSquareR.ttf") format("truetype");
+    font-family: "Delta";
+    src : url("../font/Delta Universe.ttf") format("truetype");
 }
 body {
 font-family: NanumSquareNeo;
+}
+.campnic{
+    font-family: Delta;
+    position: absolute;
+    font-size: 180px;
+    height: 70px;
+    padding-left:30%;
+    padding-top: 10%;
+}
+.inform{
+    font-family: NanumSquareNeo;
+    position: absolute;
+    font-size: 23px;
+    padding-left: 25%;
+    padding-top: 24%;
 }
