--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,21 +1,26 @@
 body{
     background: Black;
 }
+#bg{
+    width: 100%;
+    height: 100%;
+    vertical-align: middle;
+}
 .conA{
-    padding-top: 10%;
-    align-items: center;
     text-align: center;
-    padding-left: 35%;
 }
 .conB{
+    margin-top: 5em;
+    margin-left: 38em;
     padding-left: 2em;
     padding-right: 2em;
     padding-top: 1em;
     padding-bottom: 5em;
-    background-color: rgb(255, 255, 255, 0.8);
+    background-color: rgb(255, 255, 255, 0.5);
     border-radius : 10px;
-    text-align: center;
     width: 500px;
+    text-align: center;
+    position: absolute;
 }
 .apiLogin{
     justify-content: space-between;
