--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -1,18 +1,127 @@
+body{
+background-color: black;
+}
 #btn-join{
     background-color: rgba(174, 201, 168, 0.731);
-    font-size: 20px;
-    width:250px;
+    font-size: 30px;
 }
 #btn-join2{
     background-color: rgba(174, 201, 168, 0.731);
-    font-size: 20px;
-    width:250px;
+    font-size: 30px;
+}
+#btn-join3{
+    background-color: rgb(250, 128, 114, 0.7);
+    font-size: 30px;
+}
+.bottomImg{
+    width: 100px;
+    height: 100px;
+}
+#bottomImg{
+    width: 100px;
+    height: 100px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .modal-title{
     font-size:25px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .modal-body{
     text-align: left;
     font-size: 20px;
+}
+.modal fade{
+    color: black;
+}
+.conA{
+    border:0;
+    width:100%;
+    height:50%;
+}
+.conA img{
+    width:100%;
+    height:100%;
+    margin:0;
+    padding:0;
+}
+.title{
+    color: aliceblue;
+    text-align : center;
+    position : absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate( -50%, -50% );
+}
+#title{
+    color: black;
+    text-align : center;
+    position : absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate( -50%, -50% );
+}
+.a_title{
+    text-decoration: none;
+    width: 33%;
+    height: 50%;
+}
+.img_title{
+    border:0;
+    vertical-align : middle;
+}
+.highlight{
+    background: SeaGreen;
+    color: aliceblue;
+}
+.con1{
+    display: inline-block;
+    margin: 0;
+    width: 33%;
+    height: 50%;
+    position: relative;
+}
+.con2{
+    display:inline-block;
+    margin: 0;
+    width: 33%;
+    height: 50%;
+    position: relative;
+}
+.con3{
+    display: inline-block;
+    margin: 0;
+    width: 33%;
+    height: 50%;
+    position: relative;
+}
+.con4{
+    display: inline-block;
+    margin: 0;
+    width: 33%;
+    height: 50%;
+    position: relative;
+    border-right-width: 0.5px;
+    border-right-style: solid;
+    border-right-color: white;
+    color: black;
+}
+.conB{
+    padding-top: 30px;
+}
+.con5{
+    display:inline-block;
+    margin: 0;
+    width: 33%;
+    height: 50%;
+    position: relative;
+    border-right-width: 0.5px;
+    border-right-style: solid;
+    border-right-color: white;
+}
+.con6{
+    display: inline-block;
+    margin: 0;
+    width: 33%;
+    height: 50%;
+    position: relative;
 }
