--- a/src/main/resources/templates/views/main.html
+++ b/src/main/resources/templates/views/main.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org"
+                xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -15,12 +17,27 @@
 <!--/* 인증 헤더 */-->
 <th:block th:insert="~{common/header::header}"></th:block>
 
-<div class="container mt-3">
-    <h1>Main</h1>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br>
-</div>
+<div class="conA">
+    <div class="conA-bg">
+        <p class="campnic">"  C A M P N I C  "</p>
+        <p class="inform">; CAMPNIC 은 캠퍼들에게 다양한 캠핑장을 소개하고 새로운 편의성을 제공합니다.</p>
 
+<!--        백그라운드 img에 링크를 거는게 position 문제로 안 걸어지네요,, header에서 링크타고 들어가는 게 좋을 것 같아요~-->
+<!--            <div class="conA-a">-->
+<!--            <a class="link" th:href="@{/camp/list}">캠핑장 보러가기</a><br>-->
+<!--            <a class="link2" th:href="@{/camp/admin/camping/list}" sec:authorize="hasRole('CAMPING')">관리자 모드</a>-->
+<!--            </div>-->
+<!--            <div class="conA-b">-->
+<!--            <a class="link" th:href="@{/lender/itemList}">캠핑용품 렌탈</a><br>-->
+<!--            <a class="link2" th:href="@{/lender/admin/list}" sec:authorize="hasRole('LENDER')">관리자 모드</a>-->
+<!--            </div>-->
+
+
+        <div id="awan"></div>
+        <img th:src="@{/img/background.png}" id="bg">
+    </div>
+</div>
+</div>
 </body>
 </html>
 
