--- a/src/main/resources/templates/views/user/join.html
+++ b/src/main/resources/templates/views/user/join.html
@@ -23,7 +23,7 @@
 <!--/* 인증 헤더 */-->
 <th:block th:insert="~{common/header::header}"></th:block>
 
-<div class="conA" style="padding-top: 3%">
+<section class="conA">
     <form method="POST" th:action="@{/user/join}">
         <div class="conB" style="text-align: left; padding-bottom: 3em;">
             <h2 class="joinTxt"><b>회원가입</b></h2>
@@ -61,7 +61,9 @@
                 <button class="loginBtn" type="submit">회원가입</button>
             </div>
         </div>
+    <div class="conA-bg"><img th:src="@{/img/background.png}" id="bg"></div>
     </form>
-</div>
+</section>
+
 </body>
 </html>
