--- a/src/main/resources/templates/views/main.html
+++ b/src/main/resources/templates/views/main.html
@@ -20,7 +20,7 @@
 <div class="conA">
     <div class="conA-bg">
         <p class="campnic">"  C A M P N I C  "</p>
-        <p class="inform">; CAMPNIC 은 캠퍼들에게 다양한 캠핑장을 소개하고 새로운 편의성을 제공합니다.</p>
+        <p class="inform"> CAMPNIC 은 캠퍼들에게 다양한 캠핑장을 소개하고 새로운 편의성을 제공합니다.</p>
 
 <!--        백그라운드 img에 링크를 거는게 position 문제로 안 걸어지네요,, header에서 링크타고 들어가는 게 좋을 것 같아요~-->
 <!--            <div class="conA-a">-->
