--- a/src/main/resources/templates/views/camp/recipt.html
+++ b/src/main/resources/templates/views/camp/recipt.html
@@ -1,72 +1,84 @@
 <!DOCTYPE html>
-<html lang="ko"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- <script th:if="${list == null} or ${#lists.size(list) <= 0}">
+        alert("해당 정보가 삭제되거나 없습니다");
+        history.back();
+    </script> -->
 
-    <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
 
-    <script src="https://kit.fontawesome.com/51772bd9bd.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script th:src="@{/js/list.js}"></script>
+<th:block th:if="${list} and ${#lists.size(list) > 0}" th:with="dto=${list[0]}">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <title>목록</title>
-</head>
+        <link rel="stylesheet" type="text/css" th:href="@{/css/leisure/common.css}">
 
-<body>
-<!--/* 인증 헤더 */-->
-<th:block th:insert="~{common/header::header}"></th:block>
-<th:block th:with="dto=${list[0]}">
+        <script th:src="@{/js/detail.js}"></script>
+    </head>
+
+    <body>
+    <th:block th:insert="~{common/header::header}"></th:block>
     <div class="container mt-3">
-        <h2>목록</h2>
+        <h2 id = dh2>[[${dto.campsite.camping.camp_name}]]</h2>
 
-        <hr>
-        <!-- 목록 -->
-        <table class="table table-hover">
-            <thead class="table-success">
-            <tr>
-                <th>제목</th>
-                <th>입실</th>
-                <th>퇴실</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="dto : ${list}">
-                <td><a th:href="@{/camp/reserveDetail(id=${dto.id})}">[[${dto.campsite.camping.camp_name}]]</a></td>
-                <td>[[${dto.sdate}]]</td>
-                <td>[[${dto.edate}]]</td>
-            </tr>
-            </tbody>
-        </table>
+        <section>
+            <form name="frmDelete" th:action="@{/camp/reserveDelete}" method="post">
+                <input type="hidden" name="id" th:value="${dto.id}">
+            </form>
+
+            <div class=detail>
+                <label>캠핑장 이름:</label>
+                <div class="border bg-light rounded p-2" >[[${dto.campsite.camping.camp_name}]]</div>
+            </div>
+            <div class=detail>
+                <label>주소:</label>
+                <div class="border bg-light rounded p-2" >[[${dto.campsite.camping.city}]][[${dto.campsite.camping.address}]]</div>
+            </div>
+            <div class=detail>
+                <label>예약자 명:</label>
+                <div class="border bg-light rounded p-2" >[[${dto.user.name}]]</div>
+            </div>
+            <div class=detail>
+                <label>구역 번호:</label>
+                <div class="border bg-light rounded p-2" >[[${dto.campsite.number}]]</div>
+            </div>
+            <div class=detail>
+                <label>캠핑장 소개:</label>
+                <div class="border bg-light rounded p-2" >[[${dto.campsite.camping.content}]]</div>
+            </div>
+            <div class=detail>
+                <label>구역 소개:</label>
+                <div class="border bg-light rounded p-2" >[[${dto.campsite.content}]]</div>
+            </div>
+            <div class=detail>
+                <label>날짜:</label>
+                <div class="border bg-light rounded p-2" >[[${dto.sdate}]] ~ [[${dto.edate}]]</div>
+            </div>
+            <div class=detail>
+                <label>가격:</label>
+                <div class="border bg-light rounded p-2" >[[${dto.campsite.price}]]</div>
+            </div>
+            <div class=detail>
+                <label>쿠폰 번호:</label>
+                <div class="border bg-light rounded p-2" >[[${dto.coupon}]]</div>
+            </div>
+
+
+
+            <div id = dbutton>
+                <!-- 하단 링크 -->
+                <a class="btn btn-outline-dark" th:href="@{/camp/reserveList}">목록으로</a>
+            </div>
+
+            <!-- 하단 링크 -->
+
+        </section>
     </div>
+    </div>
+    </body>
 </th:block>
-
-<!-- 목록 -->
-</div>
-</body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
