--- a/src/main/resources/templates/views/camp/admin/campsite/list.html
+++ b/src/main/resources/templates/views/camp/admin/campsite/list.html
@@ -31,6 +31,7 @@
     <table class="table table-hover">
         <thead class="table-success">
         <tr>
+            <th>이미지</th>
             <th>번호</th>
             <th>소개</th>
             <th>가격</th>
@@ -38,14 +39,18 @@
         </thead>
         <tbody>
         <tr th:each="cs : ${list}">
-            <td><a th:href="@{/camp/admin/campsite/detail(id=${dto.id})}">[[${cs.number}]]</a> </td>
+            <td>
+                <div th:if="${cs.fileList != null and cs.fileList.size() > 0}">
+                    <img th:src="@{'/upload/camp/' + ${cs.fileList[0].file}}" style="width:150px; height:150px;" class="card-img-top" alt="campImage">
+                </div>
+            </td>
+            <td><a th:href="@{/camp/admin/campsite/detail(id=${cs.id})}">[[${cs.number}]]</a></td>
             <td>[[${cs.content}]]</td>
             <td>[[${cs.price}]]</td>
         </tr>
         </tbody>
     </table>
     <!-- 목록 -->
-
     <div class="row">
         <div class="col-12">
             <a class="btn btn-outline-dark" th:href="@{/camp/admin/campsite/write(id=${dto.camping.id})}">캠핑장 구역 등록</a>
