--- a/src/main/resources/templates/views/camp/admin/campsite/deleteOK.html
+++ b/src/main/resources/templates/views/camp/admin/campsite/deleteOK.html
@@ -6,7 +6,7 @@
 </script>
 <script th:if="${result > 0}">
     alert("삭제 성공");
-    location.href = "list?id=[[${dto}]]";
+    location.href = "list?id=[[${dto.id}]]";
 </script>
 </html>
 
