--- a/src/main/resources/templates/views/camp/admin/campsite/writeOK.html
+++ b/src/main/resources/templates/views/camp/admin/campsite/writeOK.html
@@ -6,7 +6,7 @@
   </script>
 <script th:if="${result > 0}" th:inline="javascript">
      alert("등록 성공");
-     location.href = "/main";
+     location.href = "list?id=[[${dto.camping.id}]]";
   </script>
 </html>
 
